--- a/css/taz.html
+++ b/css/taz.html
@@ -10,17 +10,19 @@
 </head>
 
 <body>
-    <header class="header">
-        <img src="img/logo3.png" alt="kidskinder" class="logo" />
+    <header>
         <nav class="navbar">
+            <div class="logo">
+                <h1>Kids Kinder</h1>
+            </div>
             <ul class="navbar-list">
-                <li><a href="#" class="navbar-link home-link">Home</a></li>
-                <li><a href="#"class="navbar-link about-link">about</a></li>
-                <li><a href="#" class="navbar-link classes">classes</a></li>
-                <li><a class="navbar-link Teachers-link"href="#">Teachers</a></li>
-                <li><a class="navbar-link gallery-link" href="#">Gallery</a></li>
-                <li><a class="navbar-link pages-link" href="#">pages</a></li>
-                <li><a class="navbar-link contact-link" href="#"> contact</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">about</a></li>
+                <li><a href="#" >classes</a></li>
+                <li><a href="#">Teachers</a></li>
+                <li><a href="#">Gallery</a></li>
+                <li><a href="#">pages<div class="triangle-down"></a></li>
+                <li><a href="#"> contact</a></li>
             </ul>
             <button class="btn1">Join class</button>
         </nav>
@@ -91,12 +93,14 @@
                 vitae sequi dolor dolorum.</p>
                 <div class="school-image2">
 
-                    <h3 class="para">Lorem ipsum dolor sit amet.</h3>  
+          <!--  <h3 class="para">Lorem ipsum dolor sit amet.</h3>  
             <h3 class="para1">Lorem ipsum dolor sit amet.</h3> 
-            <h3 class="para2">Lorem ipsum dolor sit amet.</h3> 
+            <h3 class="para2">Lorem ipsum dolor sit amet.</h3>--> 
                 </div>
                 <img src="/css/img/about-2.jpg" alt="best school">
-               
+               <p>Lorem ipsum dolor sit amet.</p>
+               <p>Lorem ipsum dolor sit amet.</p>
+               <p>Lorem ipsum dolor sit amet.</p>
     </div>
 
         
@@ -104,6 +108,7 @@
         <button class="school btn">Learn more</button>
 
     </section>
+</header>
 </body>
 
 </html>
