--- a/css/13.html
+++ b/css/13.html
@@ -13,26 +13,24 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <a href="#">KidsKinder</a>
+                <a href="#">
+                    <img src="../css/img/kidkinder.png" style="width:100%; margin-top:2px; height:100%"/>
+                </a>
             </div>
             <div class="menu">
-                <Ul>
+                <ul>
                     <li><a href=# class="active">Home</a></li>
-                    <li><a href=# class="active">About</a></li>
-                    <li><a href=# class="active">Classes</a></li>
-                    <li><a href=# class="active">Teachers</a></li>
-                    <li><a href=# class="active">Gallery</a></li>
-                    <li><a href=# class="active">Pages<div class="triangle-down"></div></a></li>
-                    <li><a href=# class="active">Contact</a></li>
-                </Ul>
+                    <li><a href=# >About</a></li>
+                    <li><a href=# >Classes</a></li>
+                    <li><a href=# >Teachers</a></li>
+                    <li><a href=# >Gallery</a></li>
+                    <li><a href=# >Pages<div class="triangle-down"></div></a></li>
+                    <li><a href=# >Contact</a></li>
+                </ul>
             </div>
             <div class="contact_btn">
                 <a href="#">Join Class</a>
             </div>
-
-
-
-
         </nav>
 
 
